# cited-cli

./: .gitignore  CLAUDE.md  DEMO.md  FUTURE.md  LICENSE  README.md  TEST_RUNBOOK.md  pyproject.toml
.github/workflows/: changelog-guard.yml  ci.yml  release.yml
Formula/: cited.rb
cited-plugin/: .mcp.json
cited-plugin/.claude-plugin/: plugin.json
cited-plugin/commands/: audit.md
cited-plugin/skills/geo-audit/: SKILL.md
cited-plugin/skills/geo-recommend/: SKILL.md
cited-plugins/: .mcp.json  CLAUDE_DESKTOP_SETUP.md  settings.json
cited-plugins/.claude-plugin/: marketplace.json  plugin.json
cited-plugins/agents/: geo-analyst.md
cited-plugins/commands/: recommend.md  status.md
cited-plugins/skills/business-setup/: SKILL.md
cited-plugins/skills/explore/: SKILL.md
cited-plugins/skills/geo-recommend/: SKILL.md
scripts/: cleanup_dev.py  deploy-mcp.sh  dev-install.sh  mcp_test_harness.py  release.sh
src/cited_cli/: __init__.py  __main__.py  app.py
src/cited_cli/api/: client.py  endpoints.py
src/cited_cli/auth/: oauth_server.py  store.py
src/cited_cli/commands/: agent.py  analytics.py  audit.py  auth.py  business.py  config_cmd.py  hq.py  job.py  mcp_cmd.py  named_audit.py  recommend.py  solution.py
src/cited_cli/config/: constants.py  manager.py
src/cited_cli/mcp/: context.py  server.py
src/cited_cli/mcp/tools/: _helpers.py  audit.py  auth.py  business.py  job.py  recommend.py  solution.py
src/cited_cli/output/: formatter.py  progress.py  tables.py
src/cited_cli/utils/: errors.py  interactive.py
tests/: conftest.py  test_api_client.py  test_auth.py  test_config.py  test_feature_parity.py  test_live_pipeline.py  test_mcp_server.py  test_mcp_tools.py  test_output.py  test_pipeline.py  test_version.py
