[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cited-cli"
version = "0.1.0"
description = "CLI for the Cited GEO platform"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
authors = [{ name = "Cited", email = "support@youcited.com" }]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "tomli-w>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
cited = "cited_cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cited_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
