[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cited-cli"
version = "0.3.5"
description = "CLI for the Cited GEO platform"
readme = "README.md"
license = "LicenseRef-Proprietary"
requires-python = ">=3.11"
authors = [{ name = "Cited", email = "support@youcited.com" }]
dependencies = [
    "cited-core>=0.3.5",
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
cited = "cited_cli.app:main"

[project.optional-dependencies]
mcp = ["cited-mcp>=0.3.5"]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "cited-mcp>=0.3.5",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cited_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "packages/core/src", "packages/mcp/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
